Updates from Overleaf

--- a/iucr.bib
+++ b/iucr.bib
@@ -382,7 +382,7 @@ url = {https://doi.org/10.1107/S1600577514016415},
   url = {https://link.aps.org/doi/10.1103/PhysRevLett.94.054802}
 }
 
-@article{Celestre:mo5214,
+@article{celestre2020,
 author = "Celestre, Rafael and Berujon, Sebastien and Roth, Thomas and Sanchez del Rio, Manuel and Barrett, Raymond",
 title = "{Modelling phase imperfections in compound refractive lenses}",
 journal = "Journal of Synchrotron Radiation",
@@ -393,6 +393,60 @@ pages = "305--318",
 month = "Mar",
 doi = {10.1107/S1600577519017235},
 url = {https://doi.org/10.1107/S1600577519017235},
+}
+
+@article{lengeler1999,
+author = "Lengeler, Bruno and Schroer, Christian and T{\"{u}}mmler, Johannes and Benner, Boris and Richwin, Matthias and Snigirev, Anatoly and Snigireva, Irina and Drakopoulos, Michael",
+title = "{Imaging by parabolic refractive lenses in the hard X-ray range}",
+journal = "Journal of Synchrotron Radiation",
+year = "1999",
+volume = "6",
+number = "6",
+pages = "1153--1167",
+month = "Nov",
+doi = {10.1107/S0909049599009747},
+url = {https://doi.org/10.1107/S0909049599009747},
+keywords = {X-ray optics, microanalysis, X-ray imaging, coherent X-ray scattering},
+}
+
+@article{srio1992,
+    title = {Waviness effects in ray-tracing of “real” optical surfaces},
+    journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+    volume = {319},
+    number = {1},
+    pages = {170-177},
+    year = {1992},
+    issn = {0168-9002},
+    doi = {https://doi.org/10.1016/0168-9002(92)90550-N},
+    url = {https://www.sciencedirect.com/science/article/pii/016890029290550N},
+    author = {M. {Sanchez del Rio} and A. Marcelli},
+}
+
+@article{signorato1997,
+    author = {Riccardo Signorato and Manuel {Sanchez del Rio}},
+    journal = {Proc. SPIE 3152, Materials, Manufacturing, and Measurement for Synchrotron Radiation Mirrors},
+    title = {{Structured slope errors on real x-ray mirrors: ray tracing versus experiment}},
+    pages = {136 -- 147},
+    year = {1997},
+    URL = {https://doi.org/10.1117/12.295553}
+}
+
+@article{berujon2020,
+	title = {X-ray optics and beam characterization using random modulation: experiments},
+	volume = {27},
+	issn = {1600-5775},
+	url = {https://journals.iucr.org/s/issues/2020/02/00/gb5097/},
+	doi = {10.1107/S1600577520000508},
+	abstract = {The X-ray near-field speckle-based phase-sensing approach and its associated processing schemes are illustrated experimentally in the context of optics and beam characterization.},
+	language = {en},
+	number = {2},
+	urldate = {2020-04-03},
+	journal = {Journal of Synchrotron Radiation},
+	author = {Berujon, S. and Cojocaru, R. and Piault, P. and Celestre, R. and Roth, T. and Barrett, R. and Ziegler, E.},
+	month = mar,
+	year = {2020},
+	pages = {293--304},
+
 }
 
 @article{ChubarElleaumeSnigirev2001,
@@ -475,3 +529,12 @@ url = {https://doi.org/10.1107/S0909049510044365},
     URL = {https://doi.org/10.1117/12.2567448}
     
 }
+
+@misc{repository,
+  author = {Sanchez del Rio, M},
+  title = {Oasys workspaces},
+  year = {2021},
+  howpublished = {\url{https://github.com/srio/paper-transfocators-resources/tree/main/workspaces}},
+  note = {Accessed: 2021-09-28}
+}
+
