working on final version

--- a/iucr.bib
+++ b/iucr.bib
@@ -538,3 +538,16 @@ url = {https://doi.org/10.1107/S0909049510044365},
   note = {Accessed: 2021-09-28}
 }
 
+@article{Celestre:mo5214,
+author = "Celestre, Rafael and Berujon, Sebastien and Roth, Thomas and Sanchez del Rio, Manuel and Barrett, Raymond",
+title = "{Modelling phase imperfections in compound refractive lenses}",
+journal = "Journal of Synchrotron Radiation",
+year = "2020",
+volume = "27",
+number = "2",
+pages = "305--318",
+month = "Mar",
+doi = {10.1107/S1600577519017235},
+url = {https://doi.org/10.1107/S1600577519017235},
+}
+
